assets/referencelink.publish.css
.reflink_search {
  /* Used by jQuery UI to calculate ui-autocomplete z-index. This tricks
  jQuery.Position to use out z-index instead of returning 0. Needed to ensure
  autocomplete list overrides other fields, Stage in particular. */
  position: relative;
  z-index: 2000;
}

ul.ui-autocomplete {
  width: 1px;
  max-height: 170px; /* 5 results */
  overflow-x: hidden;
  overflow-y: auto;
  border: 1px solid #999;
  background-color: white;
  position: absolute;
  list-style-position: outside;
  list-style: none;
  padding: 0;
  margin: 0;
  font-family: Lucida Grande,Leelawadee,Lucida Sans Unicode,sans-serif;
  font-size: 1em;
  color: #343434;
}

ul.ui-autocomplete li {
  margin: 0px;
  padding: 5px;
  cursor: default;
  display: block;
  line-height: 2.15;
  overflow: hidden;
  border-bottom: 1px solid #ddd;
}

.reflink_list {
  width: 100%;
  padding: 0;
  margin: .5em 0;
  list-style: none;
}

.reflink_list li {
  margin-top: -1px;
  padding: .5em;
  border: 1px solid #ddd;
}

.reflink_list li a.deselect {
  float: right;
  margin-left: 2em;
}

